--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: BY Blog
-SEOTitle: 歇尔瓦的博客 | BY Blog
+title: Charlesanjou Blog
+SEOTitle: 歇尔瓦的博客 | Charlesanjou Blog
 header-img: img/post-bg-desk.jpg
 email: 歇尔瓦@gmail.com
 description: "好好学习,天天向上"
-keyword: "BY, BY Blog, 歇尔瓦的博客, 歇尔瓦,"
+keyword: "Charlesanjou, Charlesanjou Blog, 歇尔瓦的博客, 歇尔瓦,"
 url: "http://charlesanjou.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
@@ -19,9 +19,9 @@ sidebar-avatar: /img/avatar.jpg      # use absolute URL, seeing it's used in bot
 # SNS settings
 RSS: false
 # weibo_username:     xieerwa
-zhihu_username:     xieerwa
-github_username:    xieerwa
-facebook_username:  xieerwa
+zhihu_username:     bugaoshunihahahah
+github_username:    bugaoshunihahahah
+facebook_username:  bugaoshunihahahah
 #jianshu_username:   e71990ada2fd
 #twitter_username:   xieerwa
 
