--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "好好学习,天天向上"
 keyword: "Charlesanjou, Charlesanjou Blog, 歇尔瓦的博客, 歇尔瓦,"
 url: "http://charlesanjou.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/charlesanjou/charlesanjou.github.io" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
