--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "BY Blog",
-  "short_name": "BY Blog",
-  "description": "A personal blog by engineer",
+  "name": "CharlesAnjou Blog",
+  "short_name": "CharlesAnjou",
+  "description": "你好 我好 大家好",
   "icons": [{
     "src": "icons/pwa_icon_128.png",
     "sizes": "128x128",
